--- a/SIoTGateway/Infrastructure.Classic/packages.config
+++ b/SIoTGateway/Infrastructure.Classic/packages.config
@@ -9,6 +9,7 @@
   <package id="DotNetty.Transport-signed" version="0.3.1" targetFramework="net451" />
   <package id="Dynamitey" version="1.0.2.0" targetFramework="net451" />
   <package id="EnterpriseLibrary.TransientFaultHandling" version="6.0.1304.0" targetFramework="net451" />
+  <package id="jQuery" version="2.2.3" targetFramework="net451" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net451" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net451" />
   <package id="Microsoft.Azure.Amqp" version="1.1.5" targetFramework="net451" />
@@ -20,13 +21,13 @@
   <package id="Microsoft.Data.OData" version="5.6.4" targetFramework="net451" />
   <package id="Microsoft.Data.Services.Client" version="5.6.4" targetFramework="net451" />
   <package id="Mono.Security" version="3.2.3.0" targetFramework="net451" />
-  <package id="Newtonsoft.Json" version="8.0.3" targetFramework="net451" />
-  <package id="PCLCrypto" version="2.0.147" targetFramework="net451" />
+  <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net451" />
+  <package id="PCLCrypto" version="1.0.86" targetFramework="net451" />
   <package id="PInvoke.BCrypt" version="0.3.2" targetFramework="net451" />
   <package id="PInvoke.Kernel32" version="0.3.2" targetFramework="net451" />
   <package id="PInvoke.NCrypt" version="0.3.2" targetFramework="net451" />
   <package id="PInvoke.Windows.Core" version="0.3.2" targetFramework="net451" />
   <package id="System.Spatial" version="5.6.4" targetFramework="net451" />
-  <package id="Validation" version="2.2.8" targetFramework="net451" />
+  <package id="Validation" version="2.0.6.15003" targetFramework="net451" />
   <package id="WindowsAzure.Storage" version="7.0.0" targetFramework="net451" />
 </packages>
