--- a/SIoTGateway/Sensors/SensorsBase/SensorsBase.UWP.csproj
+++ b/SIoTGateway/Sensors/SensorsBase/SensorsBase.UWP.csproj
@@ -107,6 +107,9 @@
     <None Include="project.json" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\SensorsBase.Classic\CommandParameters\ElapsedTimeCommandParameter.cs">
+      <Link>CommandParameters\ElapsedTimeCommandParameter.cs</Link>
+    </Compile>
     <Compile Include="..\SensorsBase.Classic\CommandParameters\IsAvailableCommandParameter.cs">
       <Link>CommandParameters\IsAvailableCommandParameter.cs</Link>
     </Compile>
