--- a/SIoTGateway/Common/Common.UWP.csproj
+++ b/SIoTGateway/Common/Common.UWP.csproj
@@ -318,6 +318,7 @@
       <Link>Schema\SchemaHelper.cs</Link>
     </Compile>
     <Compile Include="CloudConfigurationManager.cs" />
+    <Compile Include="Helpers\XMLHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SensorModuleWatcher.cs" />
     <EmbeddedResource Include="Properties\Common.rd.xml" />
