--- a/SIoTGateway/Common/Common.UWP.csproj
+++ b/SIoTGateway/Common/Common.UWP.csproj
@@ -320,9 +320,11 @@
     <Compile Include="..\Common.Classic\Schema\SchemaHelper.cs">
       <Link>Schema\SchemaHelper.cs</Link>
     </Compile>
+    <Compile Include="..\Common.Classic\SensorModuleWatcher.cs">
+      <Link>SensorModuleWatcher.cs</Link>
+    </Compile>
     <Compile Include="CloudConfigurationManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SensorModuleWatcher.cs" />
     <EmbeddedResource Include="Properties\Common.rd.xml" />
   </ItemGroup>
   <ItemGroup>
